fix input color in dark mode

--- a/packages/dp-editorjs/editorComponents/VariableOptions/index.scss
+++ b/packages/dp-editorjs/editorComponents/VariableOptions/index.scss
@@ -6,6 +6,9 @@ $loader-color: rgba(29, 32, 43, 0.3);
 
 #emailContent{
     color: #000;
+    .ce-link-autocomplete__field-input{
+        color: #000;
+    }
 }
 
 .codex-editor__redactor{
